--- a/public/css/home.css
+++ b/public/css/home.css
@@ -20,7 +20,8 @@ h6 {
 /* CSS for pop up window */
 .blurbox#blur.active {
   filter: blur(3px);
-  pointer-events: none
+  pointer-events: none;
+  position: relative;
 }
 
 .popup {
@@ -238,4 +239,11 @@ header .close {
         width: 20%;
         text-transform: uppercase;
         border: none;
+    }
+
+
+    .full-screen-img {
+        max-height: 50%;
+        width: 100%;
+        object-fit: cover;
     }
