--- a/public/css/login.css
+++ b/public/css/login.css
@@ -21,6 +21,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
 }
 .forgot-password {
     /* text-align: start; */
