--- a/public/css/register.css
+++ b/public/css/register.css
@@ -22,6 +22,8 @@
     justify-content: center;
     align-items: center;
     width: 100%;
+    margin-top: 60px;
+    margin-bottom: 100px;
 }
 .invalid-feedback {
     display: none;
