--- a/public/css/bookmark.css
+++ b/public/css/bookmark.css
@@ -35,7 +35,7 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     overflow: hidden;
-    width: 20%;
+    width: 25%;
     height: 350px;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px; 
@@ -43,12 +43,13 @@
 
 .favourite-item img {
     width: 100%;
-    height: auto;
+    height: 70%;
 }
 
 .favourite-item-content {
     background-color: #010E51;
     padding: 15px;
+    width: 100%;
     height: 100%;
 }
 
@@ -86,17 +87,17 @@
     font-size: 24px;
     color: #010E51;
 }
-.pagination {
+.paginationbookmark {
     display: flex;
     justify-content: center;
     margin-top: 20px;
 }
 
-.pagination .page-item {
+.paginationbookmark .page-item {
     margin: 0 5px;
 }
 
-.pagination .page-item .page-link {
+.paginationbookmark .page-item .page-link {
     color: #010E51;
     background-color: white;
     border: 1px solid #010E51;
@@ -105,21 +106,23 @@
     text-decoration: none;
 }
 
-.pagination .page-item.active .page-link {
+.paginationbookmark .page-item.active .page-link {
     background-color: #010E51;
     color: white;
     border: 1px solid #010E51;
 }
 
-.pagination .page-item.disabled .page-link {
+.paginationbookmark .page-item.disabled .page-link {
     color: #ddd;
     background-color: white;
     border: 1px solid #ddd;
 }
 
-.pagination .page-link:hover {
+.paginationbookmark .page-link:hover {
     background-color: #010E51;
     color: white;
     border-color: #010E51;
 }
+
+
 
