--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -308,13 +308,18 @@ button {
 }
 
 .footer2 {
-    margin-top: 190px;
+    margin-top: 45px;
+    width: 100%;
+}
+.footer2 hr{
+    width: 90%;
+    margin: auto;
 }
 
 .footer2 h5 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 60px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 5%;
 }
 
 .popup {
