--- a/public/css/layout.css
+++ b/public/css/layout.css
@@ -307,14 +307,23 @@ button {
     font-weight: bold;
 }
 
+
 .footer2 {
-    margin-top: 190px;
+    width: 100%;
+    margin-top: 50px;
+}
+
+.footer2 hr{
+    width: 90%;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 
 .footer2 h5 {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    margin-left: 60px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+    margin-left: 5%;
+    font-size: 100%;
 }
 
 .popup {
