--- a/public/css/home.css
+++ b/public/css/home.css
@@ -9,6 +9,13 @@ h6 {
   font-family: "Roboto", sans-serif;
 }
 
+button {
+    border-bottom: unset;
+}
+
+#share {
+    text-align: unset;
+}
 /* .w3-sidebar {
   z-index: 3;
   width: 250px;
@@ -205,6 +212,10 @@ h6 {
 
 #map {
     border-radius: 1%
+}
+
+#bookmark {
+    text-align: unset;
 }
 
 .image-container {
